--- a/style.css
+++ b/style.css
@@ -98,5 +98,24 @@ section.summary table tbody tr:last-of-type th {
     padding-top: 4px;
 }
 
-
-
+.button-limpar {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 6px 16px;
+    margin-top: 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .button-limpar:hover {
+    background-color: #d32f2f;
+  }
+  
+  .button-limpar:active {
+    background-color: #b71c1c;
+  }
