--- a/style.css
+++ b/style.css
@@ -102,8 +102,8 @@ section.summary table tbody tr:last-of-type th {
     background-color: #f44336;
     color: white;
     border: none;
-    padding: 6px 16px;
-    margin-top: 16px;
+    padding: 6px 12px;
+    margin: 16px 5px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -118,4 +118,26 @@ section.summary table tbody tr:last-of-type th {
   
   .button-limpar:active {
     background-color: #b71c1c;
+  }
+
+  .button-fechar-pedido {
+    background-color: #2196F3;
+    color: white;
+    border: none;
+    padding: 6px 12px;
+    margin: 16px 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .button-fechar-pedido:hover {
+    background-color: #1976D2;
+  }
+  
+  .button-fechar-pedido:active {
+    background-color: #0D47A1;
   }
